[MDEV-9468]: Client hangs in my_addr_resolve

Account for timeout of select returning a 0 error code.